# miniagda

./: .ghci  .gitignore  .travis.yml  Abstract.hs  CHANGELOG  CallStack.hs  Collection.hs  Completness.hs  Concrete.hs  Eval.hs  Eval.hs-boot  Extract.hs  HsSyntax.hs  LICENSE  Lexer.hs  Lexer.x  Main.hs  Makefile  MiniAgda.cabal  Parser.hs  Parser.y  Polarity.hs  PrettyTCM.hs  README.md  SCT.hs  SCTSyntax.hs  SPos.hs  ScopeChecker.hs  Semiring.hs  Signature.hs  SizeChecker.hs  SparseMatrix.hs  TCM.hs  TCM.hs-boot  TermCheck1.hs  TermCheck2.hs  Termination.hs  ToHaskell.hs  Tokens.hs  TraceError.hs  (+21 more)
.github/workflows/: haskell-ci.yml  stack.yml
doc/da/: Makefile  appendix.tex  bibl.tex  concl.tex  da.bib  da.tex  intro.tex  legal.tex  main.tex  prelim.tex
doc/homepage/: index.html
examples/: Acc.agda  AccP.agda  BUG-THINGOUTOFCXT.agda  Makefile  NeedNotStore.ma  NotLinearPat.agda  SAcc.agda  Trans.ma  acc.ma  addWith.ma  bad1.ma  bad2.ma  bad3.ma  bad4.ma  bad5.ma  badadm.ma  badco.ma  badlist.ma  badpos.ma  badscope.ma  badscope2.ma  badscope4.ma  badscope5.ma  badterm.ma  badterm2.ma  badterm3.ma  badterm4.ma  bottomcheck.ma  break.ma  colist.ma  crazy.ma  crazys.ma  data.ma  def.ma  div.ma  eqSize.ma  fib.ma  fun.ma  goodterm.ma  hang.ma  (+43 more)
examples/BoveCapretta/: Eval.ma  Eval_trash.ma  erasedEval.ma  notSizedEval.ma  withCaseEval.ma
examples/BrunoBarras/: ImplParadoxes.ma  Simplified.ma
examples/Coinductive/: Bits.ma  ConorMcBrideCalco09.ma  ConorMcBrideCalco09inflationary.ma  CopatternsCoList.ma  CopatternsStream.ma  Fib.ma  FinStream.ma  Oury.ma  RHSMatch.ma  RobertAtkey.ma  Stack.ma  StreamInterleave.ma  StreamMerge.ma  StreamsLtInfty.ma  SubjectReductionProblem-nocomments.ma  SubjectReductionProblem.ma  VV-cleaned.ma  ViktorVafeiadis.ma  destructor-patterns.ma
examples/DTP10/: dtp10.ma
examples/DavidThibodeau/: case.ma  eq.ma  gcd-1.ma  gcd-3.ma  gcd-bug.ma  gcd-either.ma  gcd1.ma  less.ma
examples/Eta/: AgdaIssue276ByConor.ma  AgdaIssue365.ma  AgdaIssue396.ma  RecordPatternDot.ma
examples/Existential/: CoList.ma  StreamProc.ma  StreamProcCase.ma  StreamProcMixed.ma  StreamProcSigma.ma  list.ma  nat.ma
examples/Extraction/: unicorn.ma
examples/FiCS12/: fics12-01.ma  fics12-02-old-sized.ma  fics12-03-new-sized.ma  fics12-04.ma  fics12-05.ma  fics12-06-agda-stream.ma  fics12-06.ma
examples/Gcd/: gcd-continuation.ma  gcd-either-case.ma  gcd-either-generic.ma  gcd-either-nondep.ma  gcd-either-not-mutual.ma  gcd-either.ma  gcd.ma
examples/HenningBasold/: NonProductive_Endrullis.ma
examples/HerSubst/: jfp09.ma  spine.ma
examples/HeterogeneousEq/: BoolNotFin2.ma
examples/HugoCantor/: ImpredInjIndex.ma  InjDataLoop.ma  InjDataLoopShort.ma  injectiveData-em-as-arg.ma  injectiveData.ma  tryLoopInjData.ma
examples/Hurkens/: hurkensParadox.ma
examples/Irrelevance/: Kinding.ma  ParallelSubstitution.ma  Sigma.ma  Sized.ma  UlfsCounterexample.ma  UlfsCounterexample2.ma  Vector.ma
examples/IsoRecursive/: StreamProc.ma
examples/LargeElim/: max.ma
examples/MakotoTatsuta/: gfp.ma
examples/MatOrder/: SumList.ma
examples/McGill/: appendWithAdd.ma
examples/Mutual/: DavidLeduc.ma
examples/Nisse/: RecNat.ma  ThueMorse.ma  fusion.ma  relabeling-inductive.ma  relabeling-product-return-type.ma  relabeling.ma
examples/NonStrictlyPositive/: coquandPaulin.ma
examples/Parametric/: D.ma  Id.ma  Nat.ma  Tm.ma
examples/Polarity/: DavidLeduc.ma  Eq.ma  NisseInspiredByJamesCranchMapClasses.ma  StrictlyPositiveWithLength.ma  universe.ma
examples/RBTree/: RBTreeConor.ma  RBTreeConorRecord.ma
examples/RubenHennerZibilowitz/: AntiSym.ma
examples/Singleton/: PER.ma
examples/Sized/: Cody-dollars.ma  Cody-simplified.ma  Cody.ma  CodyCaseComb.ma  CodyList.ma  Gcd.ma  Inflationary.ma  Lists.ma  Maximum.ma  Rank2SizeConstraints.ma  Tree.ma  old-Cody.ma
examples/SmartCase/: BetterDescendingList.ma  caseBool.ma  notnot.ma  omega.ma  weakSmartIf.ma
examples/Sort/: mergesort.ma
examples/Subtyping/: unit.ma
examples/UniPoly/: DanDoel.ma  IndRec.ma  List.ma
examples/adm/: adm1.ma  adm2.ma  adm3.ma
examples/aim12/: MeasuredAck.ma  SetzerStack.ma  aim12.ma
examples/unfolding/: Unfold.ma
hcar/: Makefile  MiniAgda-AM-Nov2010.tex  MiniAgda-AM-Nov2013.tex  MiniAgda-AM.tex  README  hcar-2010-Nov.tex  hcar-2011-May.tex  main.tex  template.tex
lib/: base.ma  bintree.ma  colist.ma  list.ma  nat.ma  stl.ma
main/: Main.hs
slides/: slides.tex
src/: Abstract.hs  Abstract.hs-boot  CallStack.hs  Collection.hs  Concrete.hs  Eval.hs  Eval.hs-boot  Extract.hs  HsSrcExtTests.hs  HsSyntax.hs  Lexer.x  License.hs  Main.hs  MainLib.hs  Makefile  Options.hs  Parser.y  Polarity.hs  PrettyTCM.hs  SCT.hs  SCTParser.hs  SCTSyntax.hs  ScopeChecker.hs  Semiring.hs  SparseMatrix.hs  TCM.hs  TCM.hs-boot  TermCheck1.hs  TermCheck2.hs  Termination.hs  ToHaskell.hs  Tokens.hs  TraceError.hs  TreeShapedOrder.hs  TypeChecker.hs  Util.hs  Value.hs  Value.hs-boot  Version.hs  Warshall.hs  (+1 more)
test/: GoldplateTests.hs  control-unfolding-fail.goldplate  control-unfolding-succeed.goldplate  fail.goldplate  should-fail.goldplate  should-succeed.goldplate  succeed.goldplate
test/bugs/: AgdaIssue1015.ma  AgdaIssue1015NonMutual.ma  AgdaIssue1052.ma  AgdaIssue1458.ma  StrictInfty.ma
test/fail/: AccCoqTermination.err  AccCoqTermination.ma  AccImplicit.err  AccImplicit.ma  BadConstraint.err  BadConstraint.golden  BadConstraint.ma  BadConstraint1.err  BadConstraint1.golden  BadConstraint1.ma  BadSizeLambda.err  BadSizeLambda.golden  BadSizeLambda.ma  BadSizeLambdaCoinductive.err  BadSizeLambdaCoinductive.golden  BadSizeLambdaCoinductive.ma  BadSizeLambdaInductive.err  BadSizeLambdaInductive.golden  BadSizeLambdaInductive.ma  BigDataInSet0.err  BigDataInSet0.golden  BigDataInSet0.ma  BoundedFake.err  BoundedFake.ma  BoundedQStrict.err  BoundedQStrict.golden  BoundedQStrict.ma  BoundedQWrong.err  BoundedQWrong.ma  BoxNeg.err  BoxNeg.ma  BugInMatOrder.err  BugInMatOrder.ma  CheatSubtypingPos.err  CheatSubtypingPos.ma  CoNotLowerSemi.err  CoNotLowerSemi.golden  CoNotLowerSemi.ma  (+323 more)
(+301 files in other folders)
