name:            MiniAgda
version:         0.20101126
build-type:      Simple
cabal-version:   >= 1.8 && < 2
license:         AllRightsReserved
-- You may prefer to use a licence which allows others to use your code:
-- license:         OtherLicense
-- license-file:    ...
author:          Andreas Abel
maintainer:      Andreas Abel <andreas.abel@ifi.lmu.de>
homepage:        http://www2.tcs.ifi.lmu.de/~abel/miniagda/
category:        Dependent types
synopsis:        ...
description:
  MiniAgda ...

executable miniagda
  hs-source-dirs:   .
  build-depends:    array == 0.3.*,
                    base >= 4.2 && < 4.4,
                    containers == 0.3.*,
                    haskell-src-exts >= 1.9.5 && < 1.10,
                    haskell98 >= 1.0 && < 1.2,
                    mtl == 2.0.*,
                    pretty == 1.0.*
  build-tools:      happy >= 1.15 && < 2,
                    alex >= 2.0.1 && < 3
  extensions:       MultiParamTypeClasses
                    TypeSynonymInstances
                    FlexibleInstances
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
  main-is:          Main.hs
  other-modules:    Abstract
                    Concrete
                    Eval
                    Extract
                    HsSyntax
                    Lexer
                    Main
                    Parser
                    Polarity
                    PrettyTCM
                    ScopeChecker
                    SPos
                    TCM
                    Termination
                    ToHaskell
                    Tokens
                    TraceError
                    TreeShapedOrder
                    TypeChecker
                    Util
                    Value
                    Warshall
